<resources>
    <string name="app_name">Dicoding Playground</string>
    <string name="title">Judul</string>
    <string name="description">Description</string>
    <string name="review">Review</string>
    <string name="write_your_review_here">Write your review here..</string>
    <string name="send">Kirim</string>
    <string name="width">Lebar</string>
    <string name="result">Hasil</string>
    <string name="calculate">Hitung</string>
    <string name="height">Tinggi</string>
    <string name="length">Panjang</string>
    <string name="calculate_volume">Hitung Volume</string>
    <string name="calculate_surface_area">Hitung Luas Area</string>
    <string name="calculate_circumference">Hitung Keliling</string>
    <string name="save">Simpan</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="submit">Submit</string>
    <string name="delete">Delete</string>
    <string name="image" translatable="false">image</string>
    <string name="message_undo">Batalkan menghapus item sebelumnya?</string>
    <string name="message_ok">OK</string>
    <string name="cancel">Batal</string>
    <string name="empty">Field can not be blank</string>
    <string name="update">Update</string>
    <string name="change">Ubah</string>
    <string name="add">Tambah</string>
    <string name="yes">Ya</string>
    <string name="no">Tidak</string>
    <string name="message_cancel">Apakah anda ingin membatalkan perubahan pada form?</string>
    <string name="message_delete">Apakah anda yakin ingin menghapus item ini?</string>
    <string name="added">Satu item berhasil ditambahkan</string>
    <string name="changed">Satu item berhasil diubah</string>
    <string name="deleted">Satu item berhasil dihapus</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="home">Home</string>
    <string name="bookmark">Bookmark</string>
    <string name="published_date">Published Date</string>
    <string name="save_bookmark">Save Bookmark?</string>
    <string name="no_data">No Data</string>
    <string name="upcoming">Upcoming</string>
    <string name="finished">Finished</string>
    <string name="settings">Settings</string>
    <string name="favorites">Favorites</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="setting">Setting</string>
    <string name="enable_dark_mode">Enable Dark Mode</string>
    <string name="upcoming_event">Upcoming Event</string>
    <string name="you_must_be_excited">You must be excited</string>
    <string name="something_wrong">Something Wrong</string>
    <string name="daily_reminder">Daily Reminder</string>
    <string name="enable_daily_reminder">Enable Daily Reminder</string>
    <string name="finished_event">Finished Event</string>
    <string name="you_have_missed_some_event">You have missed some event</string>
    <string name="favorites_event">Favorite Event</string>
    <string name="recommendation_event_for_you">Recommendation event for you</string>
    <string name="no_data_available">No Data Available</string>
    <string name="button">button</string>
    <string name="begin_time">"Begin time: "</string>
    <string name="end_time">End time:</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="random">Random</string>
    <string name="generate">Generate</string>
    <string name="appwidget_text">STAR WARS BANNER</string>
    <string name="empty_text">NO DATA</string>
    <string name="signup">Daftar</string>
    <string name="login">Masuk</string>
    <string name="message_welcome_page">Mau belajar Android, iOS, Machine Learning, Cloud, Front-End, Back-End, dan bidang IT lainnya? Di Dicoding aja!</string>
    <string name="title_welcome_page">Selamat datang di Dicoding!</string>
    <string name="title_signup_page">Lengkapi data dirimu di bawah ini ya</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Masukkan dulu datamu ya</string>
    <string name="title_login_page">Sudah siap untuk upgrade skill?</string>
    <string name="name" translatable="false">Nama</string>
    <string name="message_main_page">Selamat Belajar di Dicoding.</string>
    <string name="greeting">Halo %1$s,</string>
    <string name="logout">Keluar</string>
    <string name="heroes_name">Nama Pahlawan</string>
    <string name="title_menu_1">Kurikulum Standar Industri Global</string>
    <string name="title_menu_2">Belajar Fleksibel Sesuai Jadwal Anda</string>
    <string name="title_menu_3">Code Review dari Developer Expert</string>
    <string name="title_menu_4">Alumni Terpercaya di Berbagai Perusahaan</string>
    <string name="desc_menu_1">Kurikulum dikembangkan bersama perusahaan dan pemilik teknologi dunia sesuai kebutuhan industri terkini.</string>
    <string name="desc_menu_2">Belajar kapan pun, di mana pun, secara mandiri. Bebas memilih kelas sesuai minat belajar. Akses seumur hidup ke kelas dan forum diskusi setelah lulus.</string>
    <string name="desc_menu_3">Validasi skill Anda melalui 1-on-1 Professional Code Review yang diberikan langsung oleh Developer Expert.</string>
    <string name="desc_menu_4">Sertifikat yang membuktikan pengetahuan fundamental beserta keterampilan nyata yang diinginkan perusahaan global.</string>
    <string name="learn_now">Belajar Sekarang</string>
    <string name="sepatu_lari_kece_edisi_terbatas_memakai_sepatu_ini_akan_meningkatkan_pemahamanmu_ketika_belajar_coding_n_nbarang_selalu_ada_tersedia_berbagai_ukuran_dan_warna_silakan_langsung_order">Sepatu lari kece edisi terbatas. Memakai sepatu ini akan meningkatkan pemahamanmu ketika belajar coding.\n\nBarang selalu ada. Tersedia berbagai ukuran dan warna. Silakan langsung order!</string>
    <string name="name_shoes">Sepatu Lari</string>
    <string name="store">Toko Dicoding</string>
    <string name="date_localization">Diunggah 5 Agu 2021</string>
    <string name="coklat">Coklat</string>
    <string name="rating_localization">4.5 (1.249)</string>
    <string name="size_localization">42</string>
    <string name="beli_sekarang">Beli Sekarang!</string>
    <string name="price">200000.00</string>
    <string name="rating">4.5</string>
    <string name="date">5/8/2021</string>
    <string name="countRating">1249</string>
    <string name="dateFormat">Uploaded on %1$s</string>
    <string name="ratingFormat">%1$s (%2$s)</string>
    <string name="settingDescription">Change language</string>
    <string name="previewDescription">"Picture of Shoes"</string>
    <string name="storeDescription">From %1$s</string>
    <string name="sizeDescription">The size is  %1$s</string>
    <string name="colorDescription">The color is %1$s</string>
    <string name="ratingDescription">Got a rating of %1$s from %2$s</string>
    <string name="owner_name">Onwer Name</string>
    <string name="quota">Quota</string>
    <string name="registrant">Registrants</string>
    <string name="link">Link:</string>
    <string name="start_background_service">Start Background Service</string>
    <string name="stop_background_service">Stop Background Service</string>
    <string name="start_foreground_service">Start Foreground Service</string>
    <string name="stop_foreground_service">Stop Foreground Service</string>
    <string name="start_bound_service">Start Bound Service</string>
    <string name="stop_bound_service">Stop Bound Service</string>
    <string name="btn_text_play">Play</string>
    <string name="text_sound_pool">Test Soundpool</string>
    <string name="text_mediaplayer">Test Mediaplayer</string>
    <string name="btn_text_stop">Stop</string>
    <string name="camera_x">CameraX</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="empty_image_warning">Please insert an image file first.</string>
    <string name="welcome_to_dicoding_playground_story">Welcome to Dicoding Playground Story</string>
    <string name="please_upload_your_best_moment_when_learning_with_dicoding">Please upload your best moment when learning with Dicoding</string>
    <string name="sudah_siap_untuk_berbagi_pengalaman_mengesankanmu">Are you ready to share your impressive experience?</string>
    <string name="silahkan_isi_email_dan_kata_sandi_anda_dibawah">Please fill in your email and password below!</string>
    <string name="isi_dulu">Fill all Above</string>
    <string name="input_your_name">Input your name</string>
    <string name="email_must_be_filled">Email must be filled</string>
    <string name="email_not_valid">Invalid email format!</string>
    <string name="password_must_be_filled">Password must be filled</string>
    <string name="password_must_be_more_than_8_characters">Password must be at least 8 characters!</string>
    <string name="dicoding_story">Dicoding Story</string>
    <string name="no_story_data">No Story Data</string>
    <string name="confirm_logout">Confirm Logout</string>
    <string name="confirm_logout_message">Are you sure you want to logout?</string>
    <string name="empty_description">Description must be filled!</string>
    <string name="empty_image">Image must be selected</string>
    <string name="english">English</string>
    <string name="bahasa_indonesia">Bahasa Indonesia</string>
    <string name="select_language">Select Language</string>
    <string-array name="data_name" translatable="false">
        <item>Ahmad Dahlan</item>
        <item>Ahmad Yani</item>
        <item>Sutomo</item>
        <item>Gatot Soebroto</item>
        <item>Ki Hadjar Dewantarai</item>
        <item>Mohammad Hatta</item>
        <item>Soedirman</item>
        <item>Soekarno</item>
        <item>Soepomo</item>
    </string-array>
    <string name="add_current_location">Add Current Location</string>
</resources>