<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/upcoming"
        android:icon="@drawable/ic_upcoming"
        android:title="@string/upcoming"
        app:cnb_iconColor="@color/pink_700"/>
    <item
        android:id="@+id/finished"
        android:icon="@drawable/baseline_check_circle_24"
        android:title="@string/finished"
        app:cnb_iconColor="@color/pink_700"/>
    <item
        android:id="@+id/favorites"
        android:icon="@drawable/baseline_favorite_24"
        android:title="@string/favorites"
        app:cnb_iconColor="@color/pink_700" />
    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings"
        app:cnb_iconColor="@color/pink_700" />
</menu>